Reduce FaaS slide asset size

--- a/slides/faas/index.html
+++ b/slides/faas/index.html
@@ -9,8 +9,7 @@ title: "Building FaaS apps... FaaSt!"
             <div class="sl-block-content sl-block-group-content" style="transform-origin: 1045.5px 649px; z-index: 13;">
                 <div class="sl-block" data-block-type="image"
                     style="width: 82px; height: 82px; left: 1159px; top: 608px; min-width: 1px; min-height: 1px;">
-                    <div class="sl-block-content"><img data-natural-width="1350" data-natural-height="1350"
-                            data-lazy-loaded="" data-src="/slides/faas/assets/avatar.png">
+                    <div class="sl-block-content"><img data-lazy-loaded="" data-src="/slides/faas/assets/avatar.avif">
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="text"
@@ -81,8 +80,7 @@ title: "Building FaaS apps... FaaSt!"
                 <p>- Privacy and minimalism</p>
             </div>
         </div>
-        <div class="sl-block" data-block-type="text" style="height: auto; width: 160px; left: 880px; top: 279px;"
-            data-name="text-bb05a1">
+        <div class="sl-block" data-block-type="text" style="height: auto; width: 160px; left: 880px; top: 279px;">
             <div class="sl-block-content" style="z-index: 14; font-size: 500%; text-align: center;">
                 <p>🐘</p>
             </div>
@@ -144,8 +142,8 @@ title: "Building FaaS apps... FaaSt!"
         </div>
         <div class="sl-block" data-block-type="image" style="min-width: 1px; min-height: 1px; width: 144px; height:
         144px; left: 808px; top: 183px;"><a class="sl-block-content" href="https://aws.amazon.com/lambda/"
-                rel="nofollow" target="_blank"><img data-natural-width="300" data-natural-height="300"
-                    data-lazy-loaded="" data-src="/slides/faas/assets/aws-lambda-icon.png"></a></div>
+                rel="nofollow" target="_blank"><img data-lazy-loaded=""
+                    data-src="/slides/faas/assets/aws-lambda-icon.avif"></a></div>
         <div class="sl-block" data-block-type="text" style="height: auto; min-width: 30px; min-height: 30px; width:
         208px; left: 976px; top: 212px;"><a class="sl-block-style" href="https://aws.amazon.com/lambda/" rel="nofollow"
                 target="_blank">
@@ -163,16 +161,14 @@ title: "Building FaaS apps... FaaSt!"
                 </div>
             </a></div>
         <div class="sl-block" data-block-type="image" style="width: 144px; height: 129.938px; left:
-            808px; top: 413.031px; min-width: 1px; min-height: 1px;" data-name="image-82aa8e"><a
-                class="sl-block-content" href="https://workers.cloudflare.com/" rel="nofollow" target="_blank"><img
-                    class="" data-natural-width="256" data-natural-height="231" data-lazy-loaded=""
+            808px; top: 413.031px; min-width: 1px; min-height: 1px;"><a class="sl-block-content"
+                href="https://workers.cloudflare.com/" rel="nofollow" target="_blank"><img class="" data-lazy-loaded=""
                     data-src="/slides/faas/assets/cf-workers-logo.svg"></a></div>
     </section>
     <section data-preload="">
         <div class="sl-block" data-block-type="image"
             style="width: 1152px; height: 648px; left: 64px; top: 0px; min-width: 1px; min-height: 1px;">
-            <div class="sl-block-content"><img data-natural-width="800" data-natural-height="450" data-lazy-loaded=""
-                    data-src="/slides/faas/assets/meeseeks.gif"></div>
+            <div class="sl-block-content"><img data-lazy-loaded="" data-src="/slides/faas/assets/meeseeks.gif"></div>
         </div>
         <div class="sl-block" data-block-type="text" style="height: auto; width: 543px; left: 673px; top: 648px;">
             <div class="sl-block-content" style="z-index: 11; color: rgb(136, 136, 136); border-width: 1px;">
@@ -897,8 +893,7 @@ title: "Building FaaS apps... FaaSt!"
                 </div>
             </div>
         </div>
-        <div class="sl-block" data-block-type="text" style="width: 550px; left: 38px; top: 576px; height: auto;"
-            data-name="text-162b13">
+        <div class="sl-block" data-block-type="text" style="width: 550px; left: 38px; top: 576px; height: auto;">
             <div class="sl-block-content" style="z-index: 28; text-align: left;">
                 <p><u>Beware:</u> more builds can become a maintainability nightmare!</p>
             </div>
@@ -931,7 +926,8 @@ title: "Building FaaS apps... FaaSt!"
                     <path class="line-skeleton" fill="rgba(0,0,0,0)" stroke="rgba(0,0,0,0)" d="M1 200 L243 200"></path>
                     <path class="line-hitarea" fill="rgba(0,0,0,0)" stroke="rgba(0,0,0,0)" stroke-width="15"
                         d="M1 200 L243 200"></path>
-                </svg></div>
+                </svg>
+            </div>
         </div>
         <div class="sl-block sl-block-group" data-block-type="group" style="height: auto;">
             <div class="sl-block-content sl-block-group-content" style="transform-origin: 886px 261px; z-index: 24;">
@@ -1161,8 +1157,7 @@ title: "Building FaaS apps... FaaSt!"
                 </div>
             </div>
         </div>
-        <div class="sl-block" data-block-type="text" style="height: auto; width: 550px; left: 38px; top: 431px;"
-            data-name="text-5f6de8">
+        <div class="sl-block" data-block-type="text" style="height: auto; width: 550px; left: 38px; top: 431px;">
             <div class="sl-block-content" style="z-index: 24; text-align: left;">
                 <p>Integrate with your provider if it can further simplify your code: pre-included libraries, secrets
                     management, key-value store, metrics, logging, feature toggles, etc.</p>
@@ -1197,7 +1192,8 @@ title: "Building FaaS apps... FaaSt!"
                     <path class="line-skeleton" fill="rgba(0,0,0,0)" stroke="rgba(0,0,0,0)" d="M1 200 L243 200"></path>
                     <path class="line-hitarea" fill="rgba(0,0,0,0)" stroke="rgba(0,0,0,0)" stroke-width="15"
                         d="M1 200 L243 200"></path>
-                </svg></div>
+                </svg>
+            </div>
         </div>
         <div class="sl-block" data-block-type="line"
             style="width: auto; height: auto; min-width: 1px; min-height: 1px; left: 812px; top: 433px;">
@@ -1210,7 +1206,8 @@ title: "Building FaaS apps... FaaSt!"
                     <path class="line-skeleton" fill="rgba(0,0,0,0)" stroke="rgba(0,0,0,0)" d="M1 200 L243 200"></path>
                     <path class="line-hitarea" fill="rgba(0,0,0,0)" stroke="rgba(0,0,0,0)" stroke-width="15"
                         d="M1 200 L243 200"></path>
-                </svg></div>
+                </svg>
+            </div>
         </div>
         <div class="sl-block sl-block-group" data-block-type="group" style="height: auto;">
             <div class="sl-block-content sl-block-group-content" style="transform-origin: 974px 245px; z-index: 27;">
@@ -1904,8 +1901,7 @@ title: "Building FaaS apps... FaaSt!"
         <div class="sl-block" data-block-type="image"
             style="min-width: 1px; min-height: 1px; width: 1280px; height: 720px; left: 0px; top: 0px;">
             <div class="sl-block-content" style="z-index: 10; transition-duration: 0.5s; transition-delay: 0.5s;"><img
-                    data-natural-width="2400" data-natural-height="1350" data-lazy-loaded=""
-                    data-src="/slides/faas/assets/cf-home.png"></div>
+                    data-lazy-loaded="" data-src="/slides/faas/assets/cf-home.avif"></div>
         </div>
     </section>
     <section>
@@ -1971,8 +1967,7 @@ title: "Building FaaS apps... FaaSt!"
         <div class="sl-block" data-block-type="image"
             style="width: 1280px; height: 720px; left: 0px; top: 0px; min-width: 1px; min-height: 1px;">
             <div class="sl-block-content" style="z-index: 11; transition-duration: 0.5s; transition-delay: 0.5s;"><img
-                    data-natural-width="2400" data-natural-height="1350" data-lazy-loaded=""
-                    data-src="/slides/faas/assets/aws-home.png"></div>
+                    data-lazy-loaded="" data-src="/slides/faas/assets/aws-home.avif"></div>
         </div>
         <div class="sl-block" data-block-type="text" style="width: 1075px; left: 132px; top: 360px; height: auto;">
             <div class="sl-block-content"
@@ -2065,12 +2060,10 @@ title: "Building FaaS apps... FaaSt!"
                 <h2>... because there are horror stories</h2>
             </div>
         </div>
-        <div class="sl-block" data-block-type="iframe" style="width: 800px; height: 360px; left: 240px; top: 216px;">
-            <div class="sl-block-content"><iframe sandbox="allow-forms allow-scripts allow-popups
-            allow-same-origin allow-pointer-lock allow-presentation"
-                    data-src="https://einaregilsson.com/serverless-15-percent-slower-and-eight-times-more-expensive/"
-                    allow="fullscreen; accelerometer; geolocation; gyroscope; camera; encrypted-media; microphone; midi;
-            autoplay" ysexohufg="" bbui4kdt4=""></iframe></div>
+        <div class="sl-block" data-block-type="image"
+            style="width: 800px; height: 360px; left: 240px; top: 216px; min-width: 1px; min-height: 1px;">
+            <div class="sl-block-content"><img data-lazy-loaded=""
+                    data-src="/slides/faas/assets/serverless-iframe.avif"></div>
         </div>
         <div class="sl-block" data-block-type="text" style="height: auto; width: 720px; left: 320px; top: 576px;"><a
                 class="sl-block-style"
@@ -2089,7 +2082,7 @@ title: "Building FaaS apps... FaaSt!"
             </div>
         </div>
         <div class="sl-block" data-block-type="table"
-            style="height: auto; min-width: 839px; width: 1120px; left: 80px; top: 194.5px;" data-name="table-8cabf9">
+            style="height: auto; min-width: 839px; width: 1120px; left: 80px; top: 194.5px;">
             <div class="sl-block-content" data-table-rows="6" data-table-cols="3">
                 <table>
                     <tbody>
@@ -2138,8 +2131,7 @@ title: "Building FaaS apps... FaaSt!"
                 </table>
             </div>
         </div>
-        <div class="sl-block" data-block-type="text" style="height: auto; width: 1120px; left: 80px; top: 576px;"
-            data-name="text-0acb91">
+        <div class="sl-block" data-block-type="text" style="height: auto; width: 1120px; left: 80px; top: 576px;">
             <div class="sl-block-content" style="z-index: 12; border-width: 1px;">
                 <p style="text-align:left">Providers are incentivized to offer <strong>slower</strong> infrastructure to
                     their FaaS offerings; requests taking more time to complete means more to bill to the customer.</p>
@@ -2152,8 +2144,7 @@ title: "Building FaaS apps... FaaSt!"
                 <h2>... and cargo culting</h2>
             </div>
         </div>
-        <div class="sl-block" data-block-type="text" style="height: auto; width: 1120px; left: 80px; top: 216px;"
-            data-name="text-0acb91">
+        <div class="sl-block" data-block-type="text" style="height: auto; width: 1120px; left: 80px; top: 216px;">
             <div class="sl-block-content" style="z-index: 11; border-style: solid; border-width: 1px; padding: 16px;">
                 <p style="text-align: left;">Cargo cult programming can also refer to the practice of applying a design
                     pattern or coding style blindly without understanding the reasons behind that design principle. Some
@@ -2162,8 +2153,7 @@ title: "Building FaaS apps... FaaSt!"
                     automatically collects.</p>
             </div>
         </div>
-        <div class="sl-block" data-block-type="text" style="height: auto; width: 1120px; left: 80px; top: 576px;"
-            data-name="text-a4e6aa">
+        <div class="sl-block" data-block-type="text" style="height: auto; width: 1120px; left: 80px; top: 576px;">
             <div class="sl-block-content">
                 <p style="text-align:left">i.e. design an architecture that <strong>makes sense today</strong>, don't
                     shoehorn everything into a standard.</p>
@@ -2200,8 +2190,7 @@ title: "Building FaaS apps... FaaSt!"
         <div class="sl-block-content sl-block-group-content" style="transform-origin: 1045.5px 648px; z-index: 15;">
             <div class="sl-block" data-block-type="image"
                 style="width: 82px; height: 82px; left: 1159px; top: 607px; min-width: 1px; min-height: 1px;">
-                <div class="sl-block-content"><img data-natural-width="1350" data-natural-height="1350"
-                        data-lazy-loaded="" data-src="/slides/faas/assets/avatar.png"></div>
+                <div class="sl-block-content"><img data-lazy-loaded="" data-src="/slides/faas/assets/avatar.avif"></div>
             </div>
             <div class="sl-block" data-block-type="text"
                 style="height: auto; min-width: 30px; min-height: 30px; width: 287px; left: 850px; top: 646px;">
