--- a/slides/faas/index.html
+++ b/slides/faas/index.html
@@ -6,7 +6,7 @@ title: "Building FaaS apps... FaaSt!"
 <section class="stack">
     <section>
         <div class="sl-block sl-block-group" data-block-type="group" style="width: auto; height: auto;">
-            <div class="sl-block-content sl-block-group-content" style="transform-origin: 1045.5px 649px; z-index: 13;">
+            <div class="sl-block-content sl-block-group-content" style="transform-origin: 1045px 649px; z-index: 13;">
                 <div class="sl-block" data-block-type="image"
                     style="width: 82px; height: 82px; left: 1159px; top: 608px; min-width: 1px; min-height: 1px;">
                     <div class="sl-block-content"><img data-lazy-loaded="" data-src="/slides/faas/assets/avatar.avif">
@@ -61,7 +61,7 @@ title: "Building FaaS apps... FaaSt!"
                 <p>👋 <strong>Vincenzo Scalzi </strong>speaking!</p>
             </div>
         </div>
-        <div class="sl-block" data-block-type="text" style="height: auto; width: 451px; left: 189px; top: 244.5px;">
+        <div class="sl-block" data-block-type="text" style="height: auto; width: 451px; left: 189px; top: 244px;">
             <div class="sl-block-content" style="z-index: 12; text-align: left;">
                 <p><u>I work as:</u></p>
                 <p><strong>Cloud &amp; DevOps Architect</strong></p>
@@ -160,9 +160,9 @@ title: "Building FaaS apps... FaaSt!"
                     <p><strong>Workers</strong></p>
                 </div>
             </a></div>
-        <div class="sl-block" data-block-type="image" style="width: 144px; height: 129.938px; left:
-            808px; top: 413.031px; min-width: 1px; min-height: 1px;"><a class="sl-block-content"
-                href="https://workers.cloudflare.com/" rel="nofollow" target="_blank"><img class="" data-lazy-loaded=""
+        <div class="sl-block" data-block-type="image" style="width: 144px; height: 129px; left:
+            808px; top: 413px; min-width: 1px; min-height: 1px;"><a class="sl-block-content"
+                href="https://workers.cloudflare.com/" rel="nofollow" target="_blank"><img data-lazy-loaded=""
                     data-src="/slides/faas/assets/cf-workers-logo.svg"></a></div>
     </section>
     <section data-preload="">
@@ -662,7 +662,7 @@ title: "Building FaaS apps... FaaSt!"
                 <p>Handle the code, infra is managed.</p>
             </div>
         </div>
-        <div class="sl-block" data-block-type="text" style="width: 1075px; left: 102.5px; top: 190px; height: auto;">
+        <div class="sl-block" data-block-type="text" style="width: 1075px; left: 102px; top: 190px; height: auto;">
             <div class="sl-block-content">
                 <h1>Key takeaway</h1>
             </div>
@@ -1136,7 +1136,7 @@ title: "Building FaaS apps... FaaSt!"
         </div>
         <div class="sl-block sl-block-group" data-block-type="group" style="height: auto;">
             <div class="sl-block-content sl-block-group-content"
-                style="transform-origin: 789.5px 305.5px; z-index: 18;">
+                style="transform-origin: 789px 305px; z-index: 18;">
                 <div class="sl-block" data-block-type="shape"
                     style="min-width: 4px; min-height: 4px; width: 213px; height: 213px; left: 716px; top: 199px;">
                     <div class="sl-block-content" data-shape-type="rect" data-shape-fill-color="rgb(255, 255, 255)"
@@ -1262,7 +1262,7 @@ title: "Building FaaS apps... FaaSt!"
             </div>
         </div>
         <div class="sl-block sl-block-group" data-block-type="group" style="height: auto;">
-            <div class="sl-block-content sl-block-group-content" style="transform-origin: 933px 320.5px; z-index: 19;">
+            <div class="sl-block-content sl-block-group-content" style="transform-origin: 933px 320px; z-index: 19;">
                 <div class="sl-block" data-block-type="text"
                     style="height: auto; width: 148px; left: 859px; top: 304px;">
                     <div class="sl-block-content" style="z-index: 21; font-size: 50%; line-height: 0.78;">
@@ -1399,7 +1399,7 @@ title: "Building FaaS apps... FaaSt!"
                         d="M0 0 L1040 0"></path>
                 </svg></div>
         </div>
-        <div class="sl-block" data-block-type="text" style="width: 1075px; left: 102.5px; top: 190px; height: auto;">
+        <div class="sl-block" data-block-type="text" style="width: 1075px; left: 102px; top: 190px; height: auto;">
             <div class="sl-block-content">
                 <h1>Key takeaway</h1>
             </div>
@@ -1783,7 +1783,7 @@ title: "Building FaaS apps... FaaSt!"
                 <p>Knowledge all over, growing yet sparse.</p>
             </div>
         </div>
-        <div class="sl-block" data-block-type="text" style="width: 1075px; left: 102.5px; top: 190px; height: auto;">
+        <div class="sl-block" data-block-type="text" style="width: 1075px; left: 102px; top: 190px; height: auto;">
             <div class="sl-block-content">
                 <h1>Key takeaway</h1>
             </div>
@@ -2082,7 +2082,7 @@ title: "Building FaaS apps... FaaSt!"
             </div>
         </div>
         <div class="sl-block" data-block-type="table"
-            style="height: auto; min-width: 839px; width: 1120px; left: 80px; top: 194.5px;">
+            style="height: auto; min-width: 839px; width: 1120px; left: 80px; top: 194px;">
             <div class="sl-block-content" data-table-rows="6" data-table-cols="3">
                 <table>
                     <tbody>
@@ -2187,7 +2187,7 @@ title: "Building FaaS apps... FaaSt!"
         </div>
     </div>
     <div class="sl-block sl-block-group" data-block-type="group" style="width: auto; height: auto;">
-        <div class="sl-block-content sl-block-group-content" style="transform-origin: 1045.5px 648px; z-index: 15;">
+        <div class="sl-block-content sl-block-group-content" style="transform-origin: 1045px 648px; z-index: 15;">
             <div class="sl-block" data-block-type="image"
                 style="width: 82px; height: 82px; left: 1159px; top: 607px; min-width: 1px; min-height: 1px;">
                 <div class="sl-block-content"><img data-lazy-loaded="" data-src="/slides/faas/assets/avatar.avif"></div>
