Reimagine on AWS slide

--- a/slides/azure-china/index.html
+++ b/slides/azure-china/index.html
@@ -2661,7 +2661,7 @@ title: "First steps with Azure China"
         </div>
         <div class="sl-block" data-block-type="image"
             style="width: 207px; height: 58px; left: 776px; top: 553px; min-width: 1px; min-height: 1px;">
-            <div class="sl-block-content fragment" style="z-index: 12;" data-inline-svg="false" data-fragment-index="0">
+            <div class="sl-block-content fragment" style="z-index: 12;" data-fragment-index="0">
                 <img data-lazy-loaded="" data-src="/slides/azure-china/assets/image_3_.svg">
             </div>
         </div>
@@ -2915,13 +2915,13 @@ title: "First steps with Azure China"
         </div>
         <div class="sl-block" data-block-type="image"
             style="width: 270px; height: 270px; left: 984px; top: 478px; min-width: 1px; min-height: 1px;">
-            <div class="sl-block-content" style="z-index: 11;" data-inline-svg="false"><img data-lazy-loaded=""
+            <div class="sl-block-content" style="z-index: 11;"><img data-lazy-loaded=""
                     data-src="/slides/azure-china/assets/potted-plant.svg">
             </div>
         </div>
         <div class="sl-block" data-block-type="image"
             style="width: 318px; height: 318px; left: 809px; top: 422px; min-width: 1px; min-height: 1px;">
-            <div class="sl-block-content" style="z-index: 12;" data-inline-svg="false"><img data-lazy-loaded=""
+            <div class="sl-block-content" style="z-index: 12;"><img data-lazy-loaded=""
                     data-src="/slides/azure-china/assets/lava-lamp.svg">
             </div>
         </div>
